src/styles/createHomePageContent.css
.home {
  display: grid;
  grid-template-rows: repeat(4, auto);
  grid-auto-flow: row;
  gap: 2%;
}

.hero {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: center;
  justify-items: center;
}

.hero__image {
  display: grid;
  align-items: center;
  height: 10rem;
  width: 16rem;
 }

.hero__text {
  display: grid;
  justify-items: center;
  align-items: center;
  font-size: 4rem;
}

.introduction {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: center;
  justify-items: center;
}

.introduction-content {
  margin: 5% 5% 5% 0%;
}

.introduction__description {
  max-width: 50ch;
}

.introduction__image {
  height: 28rem;
  width: 24rem;
}

.opening-hours {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: center;
  justify-items: center;
}

.opening-hours__image {
  height: 20rem;
  width: 20rem;
}

.opening-hours__header {
  column-span: all;
}

.opening-hours__list {
  margin-top: 5%;
  margin-bottom: 5%;
}

.opening-hours__list-item {
  display: flex;
  justify-content: space-between;
  list-style: none;
}

.opening-hours__day {
  flex: 1;
}

.opening-hours__hours {
  flex: 1;
  text-align: right;
}

.opening-hours__footer {
  column-span: all;
  text-align: center;
  font-size: 1.3rem;
  font-weight: bold;
}

.location {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: center;
  justify-items: center;
}

.location__header {
  margin-bottom: 5%;
}

.location__image {
  height: 10rem;
  width: 14rem;
}

